--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "R Notebook"
+title: "第一次電腦作業"
 output: html_notebook
 ---
 作業除了讓同學檢視課堂所學程式外，有些題目只會給你未教過的函數建議（純為建議，你也可以不使用），你必需使用Help或網路查尋去了解函數的正確使用；搜詢正確程式函數使用的能力，也是程式設計的基本功。
 
-教育與薪資
+教育與薪資 
 
 一開始請執行
 ```{r}
