http://127.0.0.1:40895/rstudio/clear.cache.gif http://127.0.0.1:40895/rstudio/clear.cache.gif

--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "R Notebook"
+title: "第一次電腦作業"
 output: html_notebook
 ---
 作業除了讓同學檢視課堂所學程式外，有些題目只會給你未教過的函數建議（純為建議，你也可以不使用），你必需使用Help或網路查尋去了解函數的正確使用；搜詢正確程式函數使用的能力，也是程式設計的基本功。
 
-教育與薪資
+教育與薪資 
 
 一開始請執行
 ```{r}
@@ -23,7 +23,9 @@ library(ggplot2)
 
 2. 初步觀察wklywge與educ這兩個變數，你注意到什麼？可自由發揮所挔據的觀察，可以是統計量或是圖形。
 ```{r}
-
+describe(pums)
+lm(wklywge~ educ,pums)->t1
+summary(t1)
 ```
 
 
@@ -31,7 +33,8 @@ library(ggplot2)
 
 3. 使用dplyr裡的filter()留下符合條件的樣本，且樣本取名為pums2。[Hint: 此題需要了解邏輯判斷程式規則，同學可以參考https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf裡的2.4節Logical vectors。要注意的是，要判斷是否educ為12，要寫成educ==12，而非educ=12]
 ```{r}
-
+pums2<-pums %>% filter(educ==12|educ==16)
+pums2
 ```
 
 
@@ -40,7 +43,8 @@ library(ggplot2)
 
 4. 在pums2產生一個college虛擬變數，college為1若educ=16。接著檢視該變數的class。
 ```{r}
-
+pums2$college<-ifelse(pums2$educ==16,1,0)
+pums2
 ```
 
 
@@ -48,22 +52,25 @@ library(ggplot2)
 
 5. 觀察pums2不同學歷下的平均薪資與其離散度，你發現什麼？
 ```{r}
-
+pums2 %>% group_by(educ) %>% summarise(mean(wklywge),sd(wklywge))
+pums2
 ```
 
 6. 薪資研究多採用取對數轉換後的薪資，請產生取對數後的薪資變數，並取名為lwklywge。[Hint: 使用log()函數]
 ```{r}
-
+lwklywge<-log(pums2$wklywge)
 ```
 
 7. 請使用簡單迴歸來估計college對lwklywge的影響，並討論其顯著度。
 ```{r}
-
+lm(lwklywge~ college,pums2)->t2
+summary(t2)
 ```
 
 8. 考慮迴歸殘差的有異質變異，且此變異可以被college捕捉。請針對簡單迴歸模型進行FGLS估計。
 ```{r}
-
+GLS<-gls(lwklywge~ college,pums2,weights=varExp(form=~college))
+summary(GLS)
 ```
 
 9. 針對上題的異質變異進行BP檢定。
