--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -66,7 +66,9 @@ summary(lnmodel)
 
 8. 考慮迴歸殘差的有異質變異，且此變異可以被college捕捉。請針對簡單迴歸模型進行FGLS估計。
 ```{r}
-
+library()
+glsmodel<-gls(lnmodel, data=pums2, weights=varEXP(form=~college))
+summary(glsmodel)
 ```
 
 9. 針對上題的異質變異進行BP檢定。
