--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -14,8 +14,10 @@ library(ggplot2)
 ```
 
 1. 下載作業中有一個資料檔pp.csv，請將它引入R且資料名稱叫做pums以方便後續討論。[hint: 可使用environment視窗的Import Datasets選單按鍵，但記得把對應程式貼進作業檔]
-```{r}
-
+```{r, message=FALSE, warning=FALSE}
+library(readr)
+pums <- read_csv("https://raw.githubusercontent.com/raykaio/Part-I-Assignment/kai's-hw/pp.csv")
+View(pums)
 ```
 
 
@@ -23,7 +25,14 @@ library(ggplot2)
 
 2. 初步觀察wklywge與educ這兩個變數，你注意到什麼？可自由發揮所挔據的觀察，可以是統計量或是圖形。
 ```{r}
+lm(wklywge~ educ, pums)
+describe(pums)
 
+pums %>% ggplot(aes(x=educ,y=log(wklywge)))+
+  geom_point() -> f1
+f1
+pums %>% ggplot(aes(x=log(wklywge))) +
+  geom_histogram() 
 ```
 
 
