--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -48,11 +48,8 @@ View(pums2)
 
 4. 在pums2產生一個college虛擬變數，college為1若educ=16。接著檢視該變數的class。
 ```{r}
-library(dummy)
-pums2 %>%
-  dummy<- as.numeric(educ==16)
-test
-  
+college <- pums2$educ==16
+class(college)
 ```
 
 
@@ -60,16 +57,20 @@ test
 
 5. 觀察pums2不同學歷下的平均薪資與其離散度，你發現什麼？
 ```{r}
-
+pums2 %>%
+  group_by(educ) %>%
+  summarise(mean(wklywge))
 ```
 
 6. 薪資研究多採用取對數轉換後的薪資，請產生取對數後的薪資變數，並取名為lwklywge。[Hint: 使用log()函數]
 ```{r}
-
+  lwlywge <- log(pums2$wklywge)
 ```
 
 7. 請使用簡單迴歸來估計college對lwklywge的影響，並討論其顯著度。
 ```{r}
+model <- lwklywge~ college
+lm(model, data= pums2)
 
 ```
 
