http://127.0.0.1:33501/rstudio/clear.cache.gif http://127.0.0.1:33501/rstudio/clear.cache.gif

--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -45,6 +45,7 @@ pums2
 ```{r}
 pums2$college<-ifelse(pums2$educ==16,1,0)
 pums2
+class(pums2$college)
 ```
 
 
@@ -79,3 +80,4 @@ bptest(t2)
 ```
 
 10. 針對簡單迴歸模型，討論college係數可能有偏估的原因。[非電腦題，請用文字論述。]
+：college為受大學教育和受高中教育的薪資差異，但是也有更多其他因素會影響薪資差異，如父母的社經地位、所在地區、工作的職位等，這些重要解釋變數需要被控制，才能更精準測量出大學教育與高中教育對薪資的影響。
