--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -103,17 +103,13 @@ bptest(model,data=pums2)
 ```
 
 10. 針對簡單迴歸模型，討論college係數可能有偏估的原因。[非電腦題，請用文字論述。]
-# eason19987
-由於college變數代表教育程度，但影響實質薪資的原因可能不只教育程度，像是人脈、個人特質以及語言能力皆可能影響實質薪資，因此如果只考慮college這個變數，則會導致係數出現偏誤。
-[光會影響實質薪資，並不一定會造成偏誤]
 
-# caiguoliang
-college係數可能有偏誤的原因是
-（1）模型可能遺漏了重要的解釋變數，如性別，性別可能會影響薪資，這樣性別就包含在簡單回歸的殘差項里，同時，性別也可能會影響教育，例如重男輕女、伊斯蘭保守嚴重的地區，女性的教育程度可能會比男性低，這樣，假設A.3就不成立，進而估計出來的college係數也可能是偏誤的
-（2）可能存在著內生性問題，薪資會受學歷影響，但反過來，我們不能排除學歷也可能會收到薪資的影響，比如一些家庭經濟條件較差的人，當他有較高的薪資后，會選擇進修，以提高自己的職場能力，進而會出現工資高的人，學歷也會更高的情況。這樣，殘差項與被解釋變數Y有關，X又收到Y影響，即X與殘差項會相關，即違反了假設A.3
-[答案有些問題，這個資料只有「男性」」
+college變數此虛擬變數只考慮了教育程度，但可能還有其它會影響實質薪資的變數(如果一變數會影響實質薪資，但不一定會產生偏誤)，例如：性別、年齡、工作經驗、成長背景等等，因此只考慮college變數導致偏誤產生。
 
-# nijack89
-[答案有問題]
-我認為可能是college這個係數本身還可以再繼續細分下去，比如說台政清交等名校的畢業生賺的應該比其他學校多，所以college係數會產生偏差
+造成college變數產生偏誤的原因：
+a.此模型可能遺漏了重要的解釋變數，被遺漏的重要解釋變數對實質薪資的影響被涵括在殘差項內，且此殘差項也有可能同時還影響了教育程度，如上所述，因此A.3假設並不成立，產生偏誤。
+b.此迴歸可能出現內生性問題，解釋變數和被解釋變數之間相互作用，也就是教育和薪資之間會相互影響，兩者之間相互為因果關係。因此，會進而導致教育與殘差項之間產生關連，違反A.3假設。
+
+
+
 
